--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,14 @@ python:
   - "3.5"
   - "3.6"
 
+# Enable 3.7 without enabling sudo and dist: xenial for other build jobs
+# see https://github.com/travis-ci/travis-ci/issues/9815
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
+
 before_install:
   - which python
   - which pip
